tools/gcc/testsuite/gcc.target/am33-linux/i82477-1.c
/* { dg-options "-fpie" } */
/* { dg-do compile } */
/* { dg-error "-fpie is not supported" "" { target am33*-*-* } 1 } */
void
sub()
{
}
